--- a/scraper/package.json
+++ b/scraper/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.1.3",
+    "csv-parse": "^5.3.1",
     "node-html-parser": "^6.1.1"
   }
 }
